; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_z85230.c_z8530_rtsdtr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wan/extr_z85230.c_z8530_rtsdtr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.z8530_channel = type { i32* }

@RTS = common dso_local global i32 0, align 4
@DTR = common dso_local global i32 0, align 4
@R5 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.z8530_channel*, i32)* @z8530_rtsdtr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @z8530_rtsdtr(%struct.z8530_channel* %0, i32 %1) #0 {
  %3 = alloca %struct.z8530_channel*, align 8
  %4 = alloca i32, align 4
  store %struct.z8530_channel* %0, %struct.z8530_channel** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %2
  %8 = load i32, i32* @RTS, align 4
  %9 = load i32, i32* @DTR, align 4
  %10 = or i32 %8, %9
  %11 = load %struct.z8530_channel*, %struct.z8530_channel** %3, align 8
  %12 = getelementptr inbounds %struct.z8530_channel, %struct.z8530_channel* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 5
  %15 = load i32, i32* %14, align 4
  %16 = or i32 %15, %10
  store i32 %16, i32* %14, align 4
  br label %28

17:                                               ; preds = %2
  %18 = load i32, i32* @RTS, align 4
  %19 = load i32, i32* @DTR, align 4
  %20 = or i32 %18, %19
  %21 = xor i32 %20, -1
  %22 = load %struct.z8530_channel*, %struct.z8530_channel** %3, align 8
  %23 = getelementptr inbounds %struct.z8530_channel, %struct.z8530_channel* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 5
  %26 = load i32, i32* %25, align 4
  %27 = and i32 %26, %21
  store i32 %27, i32* %25, align 4
  br label %28

28:                                               ; preds = %17, %7
  %29 = load %struct.z8530_channel*, %struct.z8530_channel** %3, align 8
  %30 = load i32, i32* @R5, align 4
  %31 = load %struct.z8530_channel*, %struct.z8530_channel** %3, align 8
  %32 = getelementptr inbounds %struct.z8530_channel, %struct.z8530_channel* %31, i32 0, i32 0
  %33 = load i32*, i32** %32, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 5
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @write_zsreg(%struct.z8530_channel* %29, i32 %30, i32 %35)
  ret void
}

declare dso_local i32 @write_zsreg(%struct.z8530_channel*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
